--- a/.github/workflows/generate-long-charts.yml
+++ b/.github/workflows/generate-long-charts.yml
@@ -1,9 +1,9 @@
 name: Generate long-term charts (AIN-10: price + volume + SMA)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # ✅ ← これがあると「Run workflow」ボタンが出る
   schedule:
-    - cron: '35 21 * * *'  # JST 06:35 に合わせたスケジュール（UTC）
+    - cron: '35 21 * * *'  # JST 06:35
 
 permissions:
   contents: write
@@ -14,7 +14,8 @@ jobs:
     env:
       INDEX_KEY: ain10  # ← ファイル名に合わせて小文字・ハイフンなし
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -25,7 +26,7 @@ jobs:
         run: |
           pip install pandas matplotlib
 
-      - name: Sanity check
+      - name: Sanity check (ファイル確認)
         run: |
           echo "INDEX_KEY=$INDEX_KEY"
           ls -al docs/outputs || true
