--- a/.github/workflows/generate-long-charts.yml
+++ b/.github/workflows/generate-long-charts.yml
@@ -39,9 +39,9 @@ jobs:
           esac
 
           echo "INDEX_KEY=$KEY" | tee -a "$GITHUB_ENV"
-          echo "market_tz=$TZ"   >> "$GITHUB_OUTPUT"
-          echo "session_start=$S" >> "$GITHUB_OUTPUT"
-          echo "session_end=$E"   >> "$GITHUB_OUTPUT"
+          echo "market_tz=$TZ"       >> "$GITHUB_OUTPUT"
+          echo "session_start=$S"    >> "$GITHUB_OUTPUT"
+          echo "session_end=$E"      >> "$GITHUB_OUTPUT"
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -70,18 +70,60 @@ jobs:
           set -euo pipefail
           rm -rf scripts/__pycache__ || true
 
-      - name: Generate long-term charts
+      - name: Generate long-term charts (stats only; no PNG overwrite)
         env:
           INDEX_KEY: ${{ env.INDEX_KEY }}
-          CLAMP_SESSION: "true"
           MARKET_TZ: ${{ steps.resolve.outputs.market_tz }}
           SESSION_START: ${{ steps.resolve.outputs.session_start }}
           SESSION_END: ${{ steps.resolve.outputs.session_end }}
+          CLAMP_SESSION: "true"
         shell: bash
         run: |
           set -euo pipefail
           python scripts/long_charts.py
 
+      # ── ここで旧接頭辞を新接頭辞へ正規化 ────────────────────────────────
+      - name: Normalize legacy filenames (rename old prefixes)
+        env:
+          INDEX_KEY: ${{ env.INDEX_KEY }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          OUTDIR="docs/outputs"
+          shopt -s nullglob
+
+          normalize_prefix() {
+            local wrong="$1"; local right="$2"
+            for f in "$OUTDIR"/${wrong}*; do
+              base="$(basename "$f")"
+              new="$OUTDIR/${base/$wrong/$right}"
+              if [ "$f" != "$new" ]; then
+                if [ -e "$new" ]; then
+                  rm -f "$f" && echo "remove legacy duplicate: $base"
+                else
+                  mv -f "$f" "$new" && echo "rename: $base -> $(basename "$new")"
+                fi
+              fi
+            done
+          }
+
+          case "$INDEX_KEY" in
+            ain10)
+              normalize_prefix "ain_10_" "ain10_"
+              ;;
+            rbank9)
+              normalize_prefix "r_bank9_" "rbank9_"
+              ;;
+            scoin_plus)
+              normalize_prefix "s_coin__" "scoin_plus_"
+              normalize_prefix "s_coin_"  "scoin_plus_"
+              ;;
+            astra4)
+              normalize_prefix "3_sakura_space_" "astra4_"
+              ;;
+          esac
+
+      # ── メタファイルを除外して接頭辞チェック ────────────────────────────────
       - name: Sanity check - filenames prefix
         env:
           INDEX_KEY: ${{ env.INDEX_KEY }}
@@ -91,13 +133,18 @@ jobs:
           OUTDIR="docs/outputs"
           mismatched=0
           shopt -s nullglob
+
           for f in "$OUTDIR"/*; do
             base="$(basename "$f")"
+            case "$base" in
+              README.md|_last_run.txt) continue ;;   # 除外
+            esac
             if [[ "$base" != "${INDEX_KEY}_"* ]]; then
               echo "❌ prefix mismatch: $base"
               mismatched=1
             fi
           done
+
           if [ $mismatched -ne 0 ]; then
             echo "Prefix mismatch (INDEX_KEY=$INDEX_KEY)"
             exit 1
@@ -117,10 +164,10 @@ jobs:
           set -euo pipefail
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add docs/outputs/*.png docs/outputs/*history.csv docs/outputs/*_post_intraday.txt docs/outputs/*_stats.json 2>/dev/null || true
+          git add docs/outputs/*_stats.json docs/outputs/*_post_intraday.txt 2>/dev/null || true
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
-            git commit -m "chore(charts): update long-term charts (1d/7d/1m/1y) & stats"
+            git commit -m "chore(charts): update stats & markers"
             git push
           fi
